refactor: simplify stream and optional usage
Signed-off-by: zhaoh <yanyan.zh@alibaba-inc.com>