@@ -22,7 +22,6 @@ package com.alibaba.himarket.dto.result.mcp;
 import com.alibaba.himarket.dto.result.apsara.ListMcpServersResponse;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.Data;
 import lombok.EqualsAndHashCode;
 
@@ -45,30 +44,31 @@ public class AdpMcpServerResult extends GatewayMcpServerResult {
     private String dbType;
     private String upstreamPathPrefix;
 
-    /** 确保 mcpServerName 字段被正确设置 */
+    /**
+     * Keeps the inherited mcpServerName field aligned with the ADP name field.
+     */
     public void setName(String name) {
         this.name = name;
-        // 同时设置父类的 mcpServerName 字段
         this.setMcpServerName(name);
     }
 
-    /** 从SDK的ListMcpServersResponseBodyDataRecords创建AdpMCPServerResult */
+    /**
+     * Creates an ADP MCP server result from an SDK record.
+     */
     public static AdpMcpServerResult fromSdkRecord(ListMcpServersResponse.Record record) {
         if (record == null) {
             return null;
         }
 
         AdpMcpServerResult result = new AdpMcpServerResult();
-        // 设置基础字段
         result.setGwInstanceId(record.getGwInstanceId());
-        result.setName(record.getName()); // 该方法会同时设置name和mcpServerName
+        result.setName(record.getName());
         result.setDescription(record.getDescription());
         result.setType(record.getType());
         result.setDbType(record.getDbType());
         result.setRawConfigurations(record.getRawConfigurations());
         result.setDomains(record.getDomains());
 
-        // 映射services列表
         if (record.getServices() != null) {
             List<Service> services =
                     record.getServices().stream()
@@ -78,11 +78,10 @@ public class AdpMcpServerResult extends GatewayMcpServerResult {
                                         service.setName(svc.getName());
                                         return service;
                                     })
-                            .collect(Collectors.toList());
+                            .toList();
             result.setServices(services);
         }
 
-        // 映射consumerAuthInfo
         if (record.getConsumerAuthInfo() != null) {
             ConsumerAuthInfo authInfo = new ConsumerAuthInfo();
             authInfo.setType(record.getConsumerAuthInfo().getType());
