@@ -41,7 +41,6 @@ import java.io.IOException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.*;
-import java.util.stream.Collectors;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
 import lombok.AllArgsConstructor;
@@ -269,10 +268,7 @@ public class SkillServiceImpl implements SkillService {
                             config.getAiRegistryId(), config.getNamespace(), config.getSkillName());
             syncProductStatus(product, results);
             if (!contextHolder.isAdministrator()) {
-                results =
-                        results.stream()
-                                .filter(v -> "online".equals(v.getStatus()))
-                                .collect(Collectors.toList());
+                results = results.stream().filter(v -> "online".equals(v.getStatus())).toList();
             }
             return results;
         }
@@ -347,10 +343,7 @@ public class SkillServiceImpl implements SkillService {
 
         // Non-admin users can only see online versions
         if (!contextHolder.isAdministrator()) {
-            results =
-                    results.stream()
-                            .filter(v -> "online".equals(v.getStatus()))
-                            .collect(Collectors.toList());
+            results = results.stream().filter(v -> "online".equals(v.getStatus())).toList();
         }
 
         return results;
@@ -507,9 +500,7 @@ public class SkillServiceImpl implements SkillService {
 
         List<VersionResult> versions = listVersions(productId);
         List<VersionResult> onlineVersions =
-                versions.stream()
-                        .filter(v -> "online".equals(v.getStatus()))
-                        .collect(Collectors.toList());
+                versions.stream().filter(v -> "online".equals(v.getStatus())).toList();
 
         if (onlineVersions.isEmpty()) {
             throw new BusinessException(
